# CollectPlatform

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
APP_Student/: CMakeLists.txt  main.cpp
APP_Student/resources/: resources.qrc  style_light.qss
APP_Student/resources/MacOS/: Info.plist.in
APP_Student/src/components/: BarCard.cpp  BarCard.h  BaseWidget.cpp  BaseWidget.h  IPv4Edit.cpp  IPv4Edit.h  LogEdit.cpp  LogEdit.h  StatusIndicator.cpp  StatusIndicator.h
APP_Student/src/services/: DataQueue.h  EEGDataReceiver.cpp  EEGDataReceiver.h  MqttPublisher.cpp  MqttPublisher.h  SettingsManager.cpp  SettingsManager.h  WristbandHandler.cpp  WristbandHandler.h  WristbandServer.cpp  WristbandServer.h
APP_Student/src/views/: CameraView.cpp  CameraView.h  LogView.cpp  LogView.h  MqttPublishView.cpp  MqttPublishView.h  SettingView.cpp  SettingView.h
APP_Student/src/windows/: MainWindow.cpp  MainWindow.h
APP_Teacher/: CMakeLists.txt  main.cpp
APP_Teacher/qml/: App.qml
APP_Teacher/qml/Controls/: MyIconButton.qml  MyPage.qml  NumberInputer.qml
APP_Teacher/qml/Controls/Charts/: MultiLineChart.qml  MyDateTimeAxis.qml  MyGraphsTheme.qml  MyValueAxis.qml  SingleLineChart.qml  util.js
APP_Teacher/qml/Pages/: HomePage.qml  OfflinePage.qml  RealTimePage.qml  SettingPage.qml  StoragePage.qml
APP_Teacher/qml/Views/: WristbandView.qml
APP_Teacher/resources/: resources.qrc
APP_Teacher/resources/images/app_logo/: app_logo_design.ai
APP_Teacher/src/: MinMaxQueue.cpp  MinMaxQueue.h  QmlWatcher.cpp  QmlWatcher.h
APP_Teacher/src/services/: WristbandClientHandler.cpp  WristbandClientHandler.h  WristbandData.h  WristbandListener.cpp  WristbandListener.h
coapp/: CMakeLists.txt  main.cpp
coapp/resources/: CMakeLists.txt  resources.qrc  style_light.qss
coapp/resources/i18n/: CoApp_zh_CN.ts
coapp/src/: CMakeLists.txt
coapp/src/components/: BarCard.cpp  BarCard.h  BaseWidget.cpp  BaseWidget.h  CMakeLists.txt  IPv4Edit.cpp  IPv4Edit.h  LogBox.cpp  LogBox.h  RecordingIndicator.cpp  RecordingIndicator.h  SvgIconHelper.cpp  SvgIconHelper.h
coapp/src/components/VideoRealTime/: H264Encoder.cpp  H264Encoder.h  NaluLoop.cpp  NaluLoop.h  RTMPPusher.cpp  RTMPPusher.h  VideoFromCamera.cpp  VideoFromCamera.h  avtimebase.h  mediabase.cpp  mediabase.h  pushwork.cpp  pushwork.h  rtmpbase.cpp  rtmpbase.h  semaphore.h
coapp/src/services/: AuthService.cpp  AuthService.h  BandServer.cpp  BandServer.h  CMakeLists.txt  CameraService.cpp  CameraService.h  CoSettingsMgr.cpp  CoSettingsMgr.h  DataPipe.cpp  DataPipe.h  DataSerializer.cpp  DataSerializer.h  EEGReceiver.cpp  EEGReceiver.h  EEGRecvService.cpp  EEGRecvService.h  FFmpegHelper.cpp  FFmpegHelper.h  MqttPublisher.cpp  MqttPublisher.h  SettingsManager.cpp  SettingsManager.h  UserApi.cpp  UserApi.h  VideoPushService.cpp  VideoPushService.h  log.cpp  log.h
coapp/src/views/: BandView.cpp  BandView.h  CMakeLists.txt  CameraView.cpp  CameraView.h  DeviceView.cpp  DeviceView.h  EEGView.cpp  EEGView.h  LoginDialog.cpp  LoginDialog.h  MainWindow.cpp  MainWindow.h  NavigationView.cpp  NavigationView.h  SettingView.cpp  SettingView.h  SettingsDialog.cpp  SettingsDialog.h  UserInfoDialog.cpp  UserInfoDialog.h
coapp/src/views/navigation/: BandSettingPanel.cpp  BandSettingPanel.h  CMakeLists.txt  CameraSettingPanel.cpp  CameraSettingPanel.h  EEGSettingPanel.cpp  EEGSettingPanel.h  InfoPanel.cpp  InfoPanel.h  StreamSettingPanel.cpp
coapp/src/views/settings/: BandSettingPanel.cpp  BandSettingPanel.h  CameraSettingPanel.cpp  CameraSettingPanel.h  EEGSettingPanel.cpp  EEGSettingPanel.h  InfoPanel.cpp  InfoPanel.h  MqttSettingPanel.cpp  MqttSettingPanel.h  StreamAdvancedSettingDialog.cpp  StreamAdvancedSettingDialog.h  StreamSettingPanel.cpp  StreamSettingPanel.h
common/: CMakeLists.txt
common/model/: EEGData.cpp  EEGData.h  WristbandData.cpp  WristbandData.h  serialize.h
common/src/: SettingsManager.cpp  SettingsManager.h  singleton.h
common/src/concurrency/: DedicatedEventLoopThreadProvider.cpp  DedicatedEventLoopThreadProvider.h  EventLoopWorkerHost.h  IEventLoopThreadProvider.h  ITaskExecutor.h  ImmediateTaskExecutor.h  QThreadPoolTaskExecutor.cpp  QThreadPoolTaskExecutor.h  SharedEventLoopThreadProvider.cpp  SharedEventLoopThreadProvider.h
common/src/model/: CQueue.cpp  CQueue.h  EEGData.cpp  EEGData.h  ISensorData.cpp  ISensorData.h  ISensorSerializer.cpp  ISensorSerializer.h  WristbandData.cpp  WristbandData.h  serialize.h
common/src/network/: HttpMgr.cpp  HttpMgr.h
muapp/: App.qml  AppController.qml  CMakeLists.txt  main.cpp
muapp/resources/: resources.qrc  win_res.rc
muapp/src/: BandViewController.cpp  BandViewController.h
muapp/src/VideoRealTime/: H264Decoder.cpp  H264Decoder.h  PullWork.cpp  PullWork.h  RTMPBase.cpp  RTMPBase.h  RTMPPlayer.cpp  RTMPPlayer.h  TimesUtil.h  VideoDecodeLoop.cpp  VideoDecodeLoop.h  VideoPaintedItem.h  Video_View.cpp  Video_View.h  framequeue.cpp  framequeue.h  packetqueue.cpp  packetqueue.h
muapp/src/controllers/: BandViewController.cpp  BandViewController.h  BcgViewController.cpp  BcgViewController.h  EEGViewController.cpp  EEGViewController.h  MmwavViewController.cpp  MmwavViewController.h  RppgViewController.cpp  RppgViewController.h  SummaryController.cpp  SummaryController.h
muapp/src/models/: BandViewFrame.cpp  BandViewFrame.h  BcgViewFrame.cpp  BcgViewFrame.h  EEGViewFrame.cpp  EEGViewFrame.h  EmotionModel.cpp  EmotionModel.h  MinMaxQueue.cpp  MinMaxQueue.h  MmWavViewFrame.cpp  MmWavViewFrame.h  RppgViewFrame.cpp  RppgViewFrame.h
muapp/src/services/: DataStreamService.cpp  DataStreamService.h  MuSettingsMgr.cpp  MuSettingsMgr.h  VideoPullService.cpp  VideoPullService.h
muapp/ui/Components/: MuFlickable.qml  MuFlickablePage.qml  MuPage.qml  MuPanel.qml  MuScrollablePage.qml
muapp/ui/Pages/: HomePage.qml  OfflinePage.qml  RealtimePage.qml  SettingPage.qml  StoragePage.qml  VideoRealTime.qml
muapp/ui/Views/: BCGView.qml  BandView.qml  EEGView.qml  EmotionResultCard.qml  MMWAVView.qml  RPPGView.qml  SummaryView.qml
(+15 files in other folders)
